1、升级JDK版本至17 2、全面升级spring boot版本，升级loh4j2日志框架，解决日志漏洞框架 3、全面废除阿里巴巴fastjson框架，所有涉及到json的操作全部使用jackjson