@@ -1,17 +1,24 @@
 package ac.cn.saya.laboratory.tools;
 
 
+import ac.cn.saya.laboratory.entity.FilesEntity;
 import ac.cn.saya.laboratory.entity.UserMemory;
+import lombok.Getter;
+import lombok.Setter;
 import org.apache.commons.io.FileUtils;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.context.properties.ConfigurationProperties;
+import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
-import sun.misc.BASE64Decoder;
 
 import javax.servlet.http.HttpServletRequest;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.util.Map;
 import java.util.UUID;
-
+import java.util.Base64;
+import java.util.Base64.Decoder;
 /**
  * @Title: UploadUtils
  * @ProjectName DataCenter
@@ -20,8 +27,17 @@ import java.util.UUID;
  * @Date: 2018/11/11 21:30
  * @Description: 上传单元
  */
-
+@Component
+@ConfigurationProperties(prefix = "upload")
+@Getter
+@Setter
 public class UploadUtils {
+    
+    private Map<String, String> fileTypeMap;
+
+    private String uploadPath;
+
+
 
     /**
      * 上传logo -> class/files
@@ -31,7 +47,7 @@ public class UploadUtils {
      * @return
      * @throws Exception
      */
-    public static Result<String> uploadLogo(String image, HttpServletRequest request) throws Exception {
+    public Result<String> uploadLogo(String image, HttpServletRequest request) throws Exception {
         try {
             String header = "data:image";
             String[] imageArr = image.split(",");
@@ -44,14 +60,14 @@ public class UploadUtils {
                 //在session中取出管理员的信息   最后放入的都是 用户名 不是邮箱
                 UserMemory userSession = (UserMemory) request.getSession().getAttribute("user");
                 //将字符串格式的image转为二进制流（biye[])的decodedBytes
-                BASE64Decoder decoder = new BASE64Decoder();
-                byte[] decodedBytes = decoder.decodeBuffer(image);
+                Decoder decoder = Base64.getDecoder();
+                byte[] decodedBytes = decoder.decode(image);
                 /********生成今天的日期**********/
                 String datetime = DateUtils.getCurrentDateTime(DateUtils.fileFormat);
                 //url路径 files/picture/logo/用户名/yyyyMMdd
                 String urlPath = File.separator + "warehouse" + File.separator + "picture" + File.separator + "logo" + File.separator + userSession.getUser() + File.separator + datetime;
                 //上传文件路径-/picture/目录下该用户当天的文件夹
-                String path = System.getProperty("user.home", "/home/saya") + urlPath;
+                String path = uploadPath + urlPath;
                 File filepath = new File(path);
                 //判断路径是否存在，如果不存在就创建一个
                 //这里不能判断父目录getParentFile()是否存在
@@ -82,14 +98,13 @@ public class UploadUtils {
 
     /**
      * 上传图片（笔记、动态图片）
-     *
      * @param image
      * @param imgeUrl
      * @param request
      * @return
      * @throws Exception
      */
-    public static Result<String> uploadPicture(String image, String imgeUrl, HttpServletRequest request) throws Exception {
+    public Result<String> uploadPicture(String image, String imgeUrl, HttpServletRequest request) throws Exception {
         try {
             String header = "data:image";
             String[] imageArr = image.split(",");
@@ -100,8 +115,8 @@ public class UploadUtils {
                 // 写入磁盘标志
                 String success = "fail";
                 //将字符串格式的image转为二进制流（biye[])的decodedBytes
-                BASE64Decoder decoder = new BASE64Decoder();
-                byte[] decodedBytes = decoder.decodeBuffer(image);
+                Decoder decoder = Base64.getDecoder();
+                byte[] decodedBytes = decoder.decode(image);
                 /********生成今天的日期**********/
                 String datetime = DateUtils.getCurrentDateTime(DateUtils.fileFormat);
                 //在session中取出管理员的信息   最后放入的都是 用户名 不是邮箱
@@ -109,7 +124,7 @@ public class UploadUtils {
                 //url路径 files/picture/{wallpaper,news}/用户名/yyyyMMdd
                 String urlPath = File.separator + "warehouse" + File.separator + "picture" + File.separator + imgeUrl + File.separator + userSession.getUser() + File.separator + datetime;
                 //上传文件路径-/picture/目录下该用户当天的文件夹
-                String path = System.getProperty("user.home", "/home/saya") + urlPath;
+                String path = uploadPath + urlPath;
                 File filepath = new File(path);
                 //判断路径是否存在，如果不存在就创建一个
                 //这里不能判断父目录getParentFile()是否存在
@@ -145,7 +160,7 @@ public class UploadUtils {
      * @return
      * @throws Exception
      */
-    public static Result<String> uploadFile(MultipartFile file, HttpServletRequest request) throws Exception {
+    public Result<FilesEntity> uploadFile(MultipartFile file, HttpServletRequest request) throws Exception {
         try {
             if (file == null) {
                 return ResultUtil.error(-3, "文件不能为空");
@@ -170,7 +185,7 @@ public class UploadUtils {
                     //url路径 files/picture/document/用户名/yyyyMMdd
                     String urlPath = File.separator + "warehouse" + File.separator + "document" + File.separator + "file" + File.separator + userSession.getUser() + File.separator + datetime;
                     //上传文件路径-/picture/目录下该用户当天的文件夹
-                    String path = System.getProperty("user.home", "/home/saya") + urlPath;
+                    String path = uploadPath + urlPath;
                     File filepath = new File(path);
                     //判断路径是否存在，如果不存在就创建一个
                     //这里不能判断父目录getParentFile()是否存在
@@ -186,7 +201,13 @@ public class UploadUtils {
                     //file.transferTo(saveFile);
 
                     //上传成功
-                    return ResultUtil.success(urlPath + File.separator + newFileName);
+                    FilesEntity result = new FilesEntity();
+                    // 文件在服务器的存放目录
+                    result.setFileurl(urlPath + File.separator + newFileName);
+                    // 标记文件所属类别
+                    String classify = fileTypeMap.getOrDefault((fileType.trim()).toLowerCase(), "complex");
+                    result.setFiletype(classify);
+                    return ResultUtil.success(result);
                 } else {
                     return ResultUtil.error(-2, "请选择有效的文件");
                 }
@@ -205,7 +226,7 @@ public class UploadUtils {
      * @return
      * @throws Exception
      */
-    public static Result<String> uploadWallpaper(MultipartFile file, HttpServletRequest request) throws Exception {
+    public Result<String> uploadWallpaper(MultipartFile file, HttpServletRequest request) throws Exception {
         try {
             if (file == null) {
                 return ResultUtil.error(-3, "文件不能为空");
@@ -233,7 +254,7 @@ public class UploadUtils {
                     //url路径 files/picture/{wallpaper,news}/用户名/yyyyMMdd
                     String urlPath = File.separator + "warehouse" + File.separator + "picture" + File.separator + "wallpaper" + File.separator + userSession.getUser() + File.separator + datetime;
                     //上传文件路径-/picture/目录下该用户当天的文件夹
-                    String path = System.getProperty("user.home", "/home/saya") + urlPath;
+                    String path = uploadPath + urlPath;
                     File filepath = new File(path);
                     //判断路径是否存在，如果不存在就创建一个
                     //这里不能判断父目录getParentFile()是否存在
@@ -270,8 +291,8 @@ public class UploadUtils {
      * @创建时间 2018/11/11
      * @修改人和其它信息
      */
-    public static void deleteFile(String url) {
-        String tempurl = System.getProperty("user.home", "/home/saya") + url;
+    public void deleteFile(String url) {
+        String tempurl = uploadPath + url;
         File file = new File(tempurl);
         //判断要删除的目录是否存在
         if (file.exists() && file.isFile()) {
@@ -284,7 +305,7 @@ public class UploadUtils {
      *
      * @param path
      */
-    public static void createFolders(String path) {
+    public void createFolders(String path) {
         File file = new File(path);
         if (!file.exists()) {
             file.mkdirs();
@@ -296,7 +317,7 @@ public class UploadUtils {
      *
      * @param file
      */
-    public static void deleteFile(File file) {
+    public void deleteFile(File file) {
         if (!file.isDirectory()) {
             file.delete();
         } else {
@@ -308,11 +329,11 @@ public class UploadUtils {
         }
     }
 
-    public static void deleteFile_(String path) {
+    public void deleteFile_(String path) {
         deleteFile(new File(path));
     }
 
-    public static String uuid() {
+    public String uuid() {
         return UUID.randomUUID().toString().replaceAll("-", "");
     }
 
@@ -325,8 +346,8 @@ public class UploadUtils {
      * @创建时间 2019/1/19
      * @修改人和其它信息
      */
-    public static File getFilePath(String url) {
-        String tempurl = System.getProperty("user.home", "/home/saya") + url;
+    public File getFilePath(String url) {
+        String tempurl = uploadPath + url;
         File file = new File(tempurl);
         //判断要删除的目录是否存在
         if (file.exists() && file.isFile()) {
@@ -344,7 +365,7 @@ public class UploadUtils {
      * @创建时间 2019/1/9
      * @修改人和其它信息
      */
-    public static String descUrl(String url) {
+    public String descUrl(String url) {
         if (StringUtils.isEmpty(url)) {
             return "";
         } else {
